<resources>
    <string name="app_name">Acme Cone</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="Stock">STOCK</string>
    <string name="text_stock_autocomplete">Cone, RVO, Corners (Auto-Complete)</string>
    <string name="Split">Split</string>
    <string name="Non_Split">Non-Split</string>
    <string name="undo">Undo</string>
    <string name="deleted">Deleted</string>
    <string name="acme_info_a"><b>A</b></string>
    <string name="acme_info_b"><b>cme Cone</b> is an established single ply
        flashing manufacturer focused on customization to suit the needs of
        each individual customer. </string>
    <string name="acme_info_c"><b>Q</b></string>
    <string name="acme_info_d"><b>uality and Customization:</b> Leading in product quality, Acme Cone hand welds every product
        rather than relying on dielectric technology.</string>
    <string name="acme_info_e"><b>A</b></string>
    <string name="acme_info_f"><b>ccuracy:</b> Using a precision cutting CNC to process rolls of membrane,
        flashings are accurate down to a 16th of an inch. This insures the best possible fit.</string>
    <string name="acme_hours">\n<b>Office Hours</b>
                                \n 7:00AM - 4:00PM</string>
    <string name="acme_directions">3237 W 11th Ave, Eugene OR 97407</string>
    <string name="acme_directions_button">Directions to Acme Cone.</string>
    <string name="acme_youtube">YouTube Channel</string>
    <string name="login_edit_email">Email</string>
    <string name="login_prompt_password">Password</string>
    <string name="login_signInBttn">Sign In</string>
    <string name="login_noaccount">No account? Register</string>
    <string name="register_edit_name">Name</string>
    <string name="register_edit_email">Email</string>
    <string name="register_edit_manufacturer">Manufacturer</string>
    <string name="register_prompt_password">Password</string>
    <string name="register_registration">Register Account</string>
    <string name="register_signIn">Already have an account? Sign In</string>
    <string name="optional_notes">Notes (Optional)</string>
    <string name="color">Color</string>
    <string name="material">Material</string>
    <string name="quantity">Quantity</string>
    <string name="length">Length</string>
    <string name="height">Height</string>
    <string name="width">Width</string>
    <string name="depth">Depth</string>
    <string name="flange">Flange</string>
    <string name="top_diameter">Top Diameter</string>
    <string name="bot_diameter">Bottom Diameter</string>
    <string name="diameter">Diameter</string>
    <string-array name="fractions">
        <item>1/8</item>
        <item>&#188;</item>
        <item>3/8</item>
        <item>&#189;</item>
        <item>5/8</item>
        <item>&#190;</item>
        <item>7/8</item>
    </string-array>
    <string name="orderform_addToOrder">Add To Order</string>
    <string name="Cones">CONES</string>
    <string name="product_cones_text">Our Cones are available in both split and non-split versions.
                                Available in TPO(white/grey) and PVC(white/grey).
    </string>
    <string name="cones_sa">Short A-Cone</string>
    <string name="cones_sa_desc">
        <b> Dimensions:
            \n 1/4\" Top Diameter
            \n 4\" Bottom Diameter
            \n 5\" Height
            \n 5\" Flange
        </b>
    </string>
    <string name="cones_sa_parg">The Acme Short A cone is available in both split and non-split versions to accommodate the needs of your specific job. As a stocked item, you can expect to find both split and non-split in TPO (white/grey) and PVC (white/grey) on our shelves. Short A cones are great to have on hand for any single ply project you have coming up whether it\'s new construction or retrofitting some obscure corner of a roof that was installed 50 years ago. Conduit pipes, cables running off an HVAC, solar pipes, etc: The short A cone is the answer to the all of the small detail pieces on your next jobsite.</string>
    <string name="cones_a">A-Cone</string>
    <string name="cones_a_desc">
        <b> Dimensions:
            \n 1” Top Diameter
            \n 5” Bottom Diameter
            \n 10” Height
            \n 5” Flange
        </b>
    </string>
    <string name="corners_inside">Inside Corners</string>
    <string name="corners_inside_desc">
        <b>Dimensions:
            \n 6” Height,
            \n 6” Width,
            \n 6” Flange
        </b>
    </string>
    <string name="corners_inside_parg">The inside corner again saves time for roof applicators in
                                        the field. Rather than creating and re-creating patches
                                        on the job site, save time and use our pre welded inside corners.
    </string>
    <string name="RVOs">RVOs</string>
    <string name="RVV_W_T">RVO White TPO</string>
    <string name="RVV_G_T">RVO Grey TPO</string>
    <string name="RVV_W_P">RVO White PVC</string>
    <string name="RVV_G_P">RvO Grey PVC</string>
    <string name="SAS_W_T">[SPLIT] Short A Cone White TPO</string>
    <string name="SAS_G_T">[SPLIT] Short A Cone Grey TPO</string>
    <string name="SAS_W_P">[SPLIT] Short A Cone White PVC</string>
    <string name="SAS_G_P">[SPLIT] Short A Cone Grey PVC</string>
    <string name="ACS_W_T">[SPLIT] A Cone White TPO</string>
    <string name="ACS_G_T">[SPLIT] A Cone Grey TPO</string>
    <string name="ACS_W_P">[SPLIT] A Cone White PVC</string>
    <string name="ACS_G_P">[SPLIT] A Cone Grey PVC</string>
    <string name="BCS_W_T">[SPLIT] B Cone White TPO</string>
    <string name="BCS_G_T">[SPLIT] B Cone Grey TPO</string>
    <string name="BCS_W_P">[SPLIT] B Cone White PVC</string>
    <string name="BCS_G_P">[SPLIT] B Cone Grey PVC</string>
    <string name="CCS_W_T">[SPLIT] C Cone White TPO</string>
    <string name="CCS_G_T">[SPLIT] C Cone Grey TPO</string>
    <string name="CCS_W_P">[SPLIT] C Cone White PVC</string>
    <string name="CCS_G_P">[SPLIT] C Cone Grey PVC</string>
    <string name="SA_W_T">[NON-SPLIT] Short A Cone White TPO</string>
    <string name="SA_G_T">[NON-SPLIT] Short A Cone Grey TPO</string>
    <string name="SA_W_P">[NON-SPLIT] Short A Cone White PVC</string>
    <string name="SA_G_P">[NON-SPLIT] Short A Cone Grey PVC</string>
    <string name="AC_W_T">[NON-SPLIT] A Cone White TPO</string>
    <string name="AC_G_T">[NON-SPLIT] A Cone Grey TPO</string>
    <string name="AC_W_P">[NON-SPLIT] A Cone White PVC</string>
    <string name="AC_G_P">[NON-SPLIT] A Cone Grey PVC</string>
    <string name="BC_W_T">[NON-SPLIT] B Cone White TPO</string>
    <string name="BC_G_T">[NON-SPLIT] B Cone Grey TPO</string>
    <string name="BC_W_P">[NON-SPLIT] B Cone White PVC</string>
    <string name="BC_G_P">[NON-SPLIT] B Cone Grey PVC</string>
    <string name="CC_W_T">[NON-SPLIT] C Cone White TPO</string>
    <string name="CC_G_T">[NON-SPLIT] C Cone Grey TPO</string>
    <string name="CC_W_P">[NON-SPLIT] C Cone White PVC</string>
    <string name="CC_G_P">[NON-SPLIT] C Cone Grey PVC</string>
    <string name="BV2">Breather Vent 2-Way</string>
    <string name="BV2_W_T">2-Way Breather Vent White TPO</string>
    <string name="BV2_G_T">2-Way Breather Vent White TPO</string>
    <string name="BV2_W_P">2-Way Breather Vent White PVC</string>
    <string name="BV2_G_P">2-Way Breather Vent Grey PVC</string>
    <string name="BV1">Breather Vent 1-Way</string>
    <string name="BV1_W_T">1-Way Breather Vent White TPO</string>
    <string name="BV1_G_T">1-Way Breather Vent White TPO</string>
    <string name="BV1_W_P">1-Way Breather Vent White PVC</string>
    <string name="BV1_G_P">1-Way Breather Vent Grey PVC</string>
    <string name="Corners">CORNERS</string>
    <string name="IC_W_T">[INSIDE] Corner White TPO</string>
    <string name="IC_G_T">[INSIDE] Corner Grey TPO</string>
    <string name="IC_W_P">[INSIDE] Corner White PVC</string>
    <string name="IC_G_P">[INSIDE] Corner Grey PVC</string>
    <string name="OC_W_T">[OUTSIDE] Corner White TPO</string>
    <string name="OC_G_T">[OUTSIDE] Corner Grey TPO</string>
    <string name="OC_W_P">[OUTSIDE] Corner White PVC</string>
    <string name="OC_G_P">[OUTSIDE] Corner Grey PVC</string>
    <string name="drop_scuppers">Drop Scuppers</string>
    <string name="DS2_W_T">2\" Drop Scupper White TPO</string>
    <string name="DS2_G_T">2\" Drop Scupper Grey TPO</string>
    <string name="DS2_W_P">2\" Drop Scupper White PVC</string>
    <string name="DS2_G_P">2\" Drop Scupper Grey PVC</string>
    <string name="DS3_W_T">3\" Drop Scupper White TPO</string>
    <string name="DS3_G_T">3\" Drop Scupper Grey TPO</string>
    <string name="DS3_W_P">3\" Drop Scupper White TPO</string>
    <string name="DS3_G_P">3\" Drop Scupper Grey PVC</string>
    <string name="commercial_drain">Commercial Drains</string>
    <string name="CDS3_W_T">3\" Commercial Drain White TPO</string>
    <string name="CDS3_G_T">3\" Commercial Drain Grey TPO</string>
    <string name="CDS3_W_P">3\" Commercial Drain White PVC</string>
    <string name="CDS3_G_P">3\" Commercial Drain Grey PVC</string>
    <string name="thruwall_scuppers">ThruWall Scuppers</string>
    <string name="TW4_W_T">4\"X4\" ThruWall Scupper White TPO</string>
    <string name="TW4_G_T">4\"X4\" ThruWall Scupper Grey TPO</string>
    <string name="TW4_W_P">4\"X4\" ThruWall Scupper White PVC</string>
    <string name="TW4_G_P">4\"X4\" ThruWall Scupper Grey PVC</string>
    <string name="TW6_W_T">6\"X6\" ThruWall Scupper White TPO</string>
    <string name="TW6_G_T">6\"X6\" ThruWall Scupper Grey TPO</string>
    <string name="TW6_W_P">6\"X6\" ThruWall Scupper White TPO</string>
    <string name="TW6_G_P">6\"X6\" ThruWall Scupper Grey TPO</string>
    <string name="pitch_pans">Pitch Pans</string>
    <string name="Round">Round</string>
    <string name="Square">Square</string>
    <string name="RPP6_W_T">[ROUND] 6\" Pitch Pan White TPO</string>
    <string name="RPP6_G_T">[ROUND] 6\" Pitch Pan Grey TPO</string>
    <string name="RPP6_W_P">[ROUND] 6\" Pitch Pan White PVC</string>
    <string name="RPP6_G_P">[ROUND] 6\" Pitch Pan Grey PVC</string>
    <string name="RPP9_W_T">[ROUND] 9\" Pitch Pan White TPO</string>
    <string name="RPP9_G_T">[ROUND] 9\" Pitch Pan Grey TPO</string>
    <string name="RPP9_W_P">[ROUND] 9\" Pitch Pan White PVC</string>
    <string name="RPP9_G_P">[ROUND] 9\" Pitch Pan Grey PVC</string>
    <string name="RPP12_W_T">[ROUND] 12\" Pitch Pan White TPO</string>
    <string name="RPP12_G_T">[ROUND] 12\" Pitch Pan Grey TPO</string>
    <string name="RPP12_W_P">[ROUND] 12\" Pitch Pan White PVC</string>
    <string name="RPP12_G_P">[ROUND] 12\" Pitch Pan Grey PVC</string>
    <string name="SPP6_W_T">[SQUARE] 6\"X6\" Pitch Pan White TPO</string>
    <string name="SPP6_G_T">[SQUARE] 6\"X6\" Pitch Pan Grey TPO</string>
    <string name="SPP6_W_P">[SQUARE] 6\"X6\" Pitch Pan White PVC</string>
    <string name="SPP6_G_P">[SQUARE] 6\"X6\" Pitch Pan Grey PVC</string>
    <string name="SPP9_W_T">[SQUARE] 9\"X9\" Pitch Pan White TPO</string>
    <string name="SPP9_G_T">[SQUARE] 9\"X9\" Pitch Pan Grey TPO</string>
    <string name="SPP9_W_P">[SQUARE] 9\"X9\" Pitch Pan White PVC</string>
    <string name="SPP9_G_P">[SQUARE] 9\"X9\" Pitch Pan Grey PVC</string>
    <string name="SPP12_W_T">[SQUARE] 12\"X12\" Pitch Pan White TPO</string>
    <string name="SPP12_G_T">[SQUARE] 12\"X12\" Pitch Pan Grey TPO</string>
    <string name="SPP12_W_P">[SQUARE] 12\"X12\" Pitch Pan White PVC</string>
    <string name="SPP12_G_P">[SQUARE] 12\"X12\" Pitch Pan Grey PVC</string>
</resources>