<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/pitchpans_btn_radio_group_dimension"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/pitchpans_btn_radio_round"
            android:text="@string/Round"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/pitchpans_btn_radio_square"
            android:text="@string/Square"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/pitchpans_btn_radio_group_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/pitchpans_btn_radio_split"
            android:text="@string/Split"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/pitchpans_btn_radio_nonsplit"
            android:text="@string/Non_Split"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RadioGroup>

    <EditText
        android:id="@+id/pitchpans_text_quantity"
        android:hint="@string/quantity"
        android:inputType="number"
        android:imeOptions="actionNext"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/pitchpans_text_height"
            android:hint="@string/height"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"/>

        <Spinner
            android:id="@+id/pitchpans_menu_height_spinner"
            android:layout_toRightOf="@id/pitchpans_text_height"
            android:layout_toEndOf="@id/pitchpans_text_height"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/pitchpans_text_diameter"
            android:hint="@string/diameter"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"/>

        <Spinner
            android:id="@+id/pitchpans_menu_diameter_spinner"
            android:layout_toRightOf="@id/pitchpans_text_diameter"
            android:layout_toEndOf="@id/pitchpans_text_diameter"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>


</LinearLayout>