<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/corners_inside"
                android:textSize="30sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:contentDescription="@string/app_name"
                    android:src="@mipmap/corner_inside"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"/>

            </RelativeLayout>

            <TextView
                android:text="@string/corners_inside_desc"
                android:textSize="18dp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/corners_inside_parg"
                android:textSize="18sp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>